--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,12 +14,17 @@
     "@types/node": "^16.11.14",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router": "^5.1.18",
     "@types/styled-components": "^5.1.24",
+    "axios": "^0.26.1",
     "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.16",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.4.4",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
@@ -54,6 +59,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/puppeteer": "^5.4.4",
+    "@types/react-router-dom": "^5.3.3",
     "expect-puppeteer": "^6.0.2",
     "jest-cucumber": "^3.0.1",
     "jest-puppeteer": "^6.0.3",
