--- a/webapp/package.json
+++ b/webapp/package.json
@@ -2,6 +2,7 @@
   "name": "webapp",
   "version": "0.1.0",
   "dependencies": {
+    "@auth0/auth0-react": "^1.9.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
