--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-json-pretty": "^2.2.0",
     "react-query": "^3.34.16",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
