--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "react-json-pretty": "^2.2.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "react-json-pretty": "^2.2.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^13.0.0"
   }
 }
-
