--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^17.0.2",
     "react-json-pretty": "^2.2.0",
     "react-query": "^3.34.16",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
