--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,6 +5,9 @@
     "@auth0/auth0-react": "^1.9.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@inrupt/lit-generated-vocab-common": "^0.3.11",
+    "@inrupt/solid-client-authn-browser": "^1.11.7",
+    "@inrupt/solid-ui-react": "^2.7.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.5",
@@ -36,7 +39,6 @@
     "prod": "ts-node-dev ./server.ts",
     "start": "serve -s build",
     "heroku-postbuild": "npm run build"
-    
   },
   "eslintConfig": {
     "extends": [
