--- a/restapi/package.json
+++ b/restapi/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ts-node-dev ./server.ts",
-    "build":"tsc",
+    "build": "tsc",
     "test": "cd tests && jest --runInBand"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "express-validator": "^6.14.0",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.4",
+    "node-geocoder": "^4.0.0",
     "prom-client": "^14.0.1"
   },
   "devDependencies": {
