--- a/webapp/package.json
+++ b/webapp/package.json
@@ -25,6 +25,7 @@
     "react-json-pretty": "^2.2.0",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
+    "react-toastify": "^8.2.0",
     "serve": "^13.0.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
