--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +21,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.24",
     "express": "^4.17.2",
+    "jest": "^28.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-json-pretty": "^2.2.0",
