--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -1,51 +1,12 @@
+
 name: CI for ASW2122
 on:
   push:
-    branch: 'develop'
-
+    branch: [Cloudinary]
 jobs:
-  unit-test-webapp:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: webapp
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 16
-    - run: npm ci
-    - run: npm test
-    - uses: codecov/codecov-action@v2
-  unit-test-restapi:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: restapi
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 16
-    - run: npm ci
-    - run: npm test
-    - uses: codecov/codecov-action@v2
-  e2e-tests:
-    needs: [unit-test-webapp, unit-test-restapi]
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 16
-    - run: npm --prefix webapp install
-    - run: npm --prefix restapi install
-    - run: npm --prefix webapp run build
-    - run: npm --prefix webapp run test:e2e
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v2
     - name: Publish to Registry
@@ -59,7 +20,6 @@ jobs:
   docker-push-restapi:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v2
     - name: Publish to Registry
@@ -82,9 +42,8 @@ jobs:
         user: ${{ secrets.DEPLOY_USER }}
         key: ${{ secrets.DEPLOY_KEY }}
         command: |
-          wget https://raw.githubusercontent.com/Arquisoft/dede_es2a/develop/docker-compose-deploy.yml -O docker-compose.yml
+          wget https://raw.githubusercontent.com/Arquisoft/dede_es2a/developer/docker-compose-deploy.yml -O docker-compose.yml
           docker-compose stop
           docker-compose rm -f
           docker-compose pull   
-          docker-compose up -d      
-          */  
+          docker-compose up -d        
