--- a/restapi/.env
+++ b/restapi/.env
@@ -1,1 +1,1 @@
-DB_CONNECT='mongodb+srv://admin:dede2a@tiendajuguetes.1s9n2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
+MONGO_URI=mongodb+srv://admin:dede2a@tiendajuguetes.1s9n2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
