--- a/restapi/package.json
+++ b/restapi/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ts-node-dev": "^1.1.8",
     "body-parser": "^1.19.1",
     "cloudinary": "^1.29.1",
     "cors": "^2.8.5",
@@ -20,9 +19,11 @@
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.4",
     "node-geocoder": "^4.0.0",
-    "prom-client": "^14.0.1"
+    "prom-client": "^14.0.1",
+    "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
