--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,7 +21,8 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.24",
     "express": "^4.17.2",
-    "jest": "^28.0.1",
+    "jest": "^28.0.2",
+    "jest-puppeteer": "^6.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-json-pretty": "^2.2.0",
@@ -37,7 +38,7 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
-    "test:e2e": "start-server-and-test 'npm --prefix ../restapi start' http://localhost:5000/api/users/list prod 3000 'cd e2e && jest'",
+    "test:e2e": "start-server-and-test prod 3000 'jest --rootDir=e2e --config=./e2e/jest.config.ts'",
     "eject": "react-scripts eject",
     "prod": "ts-node-dev ./server.ts",
     "start": "serve -s build",
@@ -68,7 +69,7 @@
     "@types/puppeteer": "^5.4.4",
     "expect-puppeteer": "^6.0.2",
     "jest-cucumber": "^3.0.1",
-    "jest-puppeteer": "^6.0.3",
+   
     "puppeteer": "^13.0.1",
     "react-scripts": "^5.0.0",
     "start-server-and-test": "^1.14.0",
