--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -1,11 +1,11 @@
 version: '3.5'
 services:
   restapi:
-    image: ghcr.io/arquisoft/dede_es2a/restapi:latest
+    build: ./restapi
     ports:
       - "5000:5000"
   webapp:
-    image: ghcr.io/arquisoft/dede_es2a/webapp:latest
+    build: ./webapp
     ports:
       - "3000:3000"
     depends_on: 
