--- a/.github/workflows/pruebaDeploy.yml
+++ b/.github/workflows/pruebaDeploy.yml
@@ -7,7 +7,6 @@ jobs:
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v2
     - name: Publish to Registry
@@ -41,7 +40,7 @@ jobs:
       uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_api_key: ${{ secrets.DEPLOY_KEY }}
-        heroku_app_name: ${{ secrets.APP_NAME }}
+        heroku_app_name: "dede-es2a-webapp"
         heroku_email: ${{ secrets.EMAIL }}
         usedocker: true
         appdir: "webapp"      
@@ -54,7 +53,7 @@ jobs:
       uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_api_key: ${{ secrets.DEPLOY_KEY }}
-        heroku_app_name: ${{ secrets.APP_NAME }}
+        heroku_app_name: "dede-es2a-restapi"
         heroku_email: ${{ secrets.EMAIL }}
         usedocker: true
         appdir: "restapi" 
