--- a/restapi/package.json
+++ b/restapi/package.json
@@ -23,15 +23,18 @@
     "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.2",
     "@types/supertest": "^2.0.11",
     "jest": "^27.4.7",
+    "jest-cucumber": "^3.0.1",
+    "jest-puppeteer": "^6.1.0",
+    "puppeteer": "^13.7.0",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
 }
