Probando crear imagenes de docker

--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -5,11 +5,9 @@ WORKDIR /app
 #Install the dependencies
 RUN npm install
 
-#Create an optimized version of the webapp
-ARG API_URI="http://localhost:5000/api" 
-ENV REACT_APP_API_URI=$API_URI
 
+#Crete an optimized version of the webapp
 RUN npm run build
 
 #Ver como podemos llamar npm run prod aquí
-CMD [ "npm", "run", "dev" ]
+CMD [ "npm", "run", "prod" ]
