Despliegue de restapi en docker

--- a/restapi/Dockerfile
+++ b/restapi/Dockerfile
@@ -3,5 +3,7 @@ LABEL org.opencontainers.image.source https://github.com/Arquisoft/dede_es2a
 COPY . /app
 WORKDIR /app
 #Install the dependencies
+
+RUN docker build
 RUN npm install
 CMD [ "npm", "start" ]
