--- a/.github/workflows/pruebaDeploy.yml
+++ b/.github/workflows/pruebaDeploy.yml
@@ -61,12 +61,12 @@ jobs:
         usedocker: true
         appdir: "restapi"
         docker_build_args: |
-          MONGO_URI 
-          CLOUDINARY_NAME
-          CLOUDINARY_API_KEY
-          CLOUDINARY_API_SECRET
+          MONGO_URI,
+          CLOUDINARY_NAME,
+          CLOUDINARY_API_KEY,
+          CLOUDINARY_API_SECRET,
       env:
-        MONGO_URI = {{secrets.MONGO_URI}}
-        CLOUDINARY_NAME={{secrets.CLOUD_NAME}}
-        CLOUDINARY_API_KEY={{secrets.CLOUD_KEY}}
-        CLOUDINARY_API_SECRET={{secrets.CLOUD_SECRET}}
+        MONGO_URI = {{secrets.MONGO_URI}},
+        CLOUDINARY_NAME={{secrets.CLOUD_NAME}},
+        CLOUDINARY_API_KEY={{secrets.CLOUD_KEY}},
+        CLOUDINARY_API_SECRET={{secrets.CLOUD_SECRET}},
