--- a/.github/workflows/pruebaDeploy.yml
+++ b/.github/workflows/pruebaDeploy.yml
@@ -42,7 +42,7 @@ jobs:
         heroku_app_name: "dede-es2a-webapp"
         heroku_email: ${{ secrets.EMAIL }}
         usedocker: true
-        appdir: "webapp"     
+        workdir: "webapp"     
         docker_build_args: |
           API_URI
       env:
@@ -59,14 +59,14 @@ jobs:
         heroku_app_name: "dede-es2a-restapi"
         heroku_email: ${{ secrets.EMAIL }}
         usedocker: true
-        appdir: "restapi"
+        workdir: "restapi"
         docker_build_args: |
-          MONGO_URI,
-          CLOUDINARY_NAME,
-          CLOUDINARY_API_KEY,
-          CLOUDINARY_API_SECRET,
+          MONGO_URI
+          CLOUDINARY_NAME
+          CLOUDINARY_API_KEY
+          CLOUDINARY_API_SECRET
       env:
-        MONGO_URI =${{secrets.MONGO_URI}},
-        CLOUDINARY_NAME=${{secrets.CLOUD_NAME}},
-        CLOUDINARY_API_KEY=${{secrets.CLOUD_KEY}},
-        CLOUDINARY_API_SECRET=${{secrets.CLOUD_SECRET}},
+        MONGO_URI =${{secrets.MONGO_URI}}
+        CLOUDINARY_NAME=${{secrets.CLOUD_NAME}}
+        CLOUDINARY_API_KEY=${{secrets.CLOUD_KEY}}
+        CLOUDINARY_API_SECRET=${{secrets.CLOUD_SECRET}}
