--- a/.github/workflows/pruebaDeploy.yml
+++ b/.github/workflows/pruebaDeploy.yml
@@ -36,7 +36,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Deploy webapp
-      uses: akhileshns/heroku-deploy@v3.12.12
+    - uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_api_key: ${{ secrets.DEPLOY_KEY }}
         heroku_app_name: "dede-es2a-webapp"
@@ -53,7 +53,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Deploy restapi
-      uses: akhileshns/heroku-deploy@v3.12.12
+    - uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_api_key: ${{ secrets.DEPLOY_KEY }}
         heroku_app_name: "dede-es2a-restapi"
