--- a/.github/workflows/pruebaDeploy.yml
+++ b/.github/workflows/pruebaDeploy.yml
@@ -8,7 +8,7 @@ jobs:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
     steps:
-    - user: actions/checkoout@v2
+    - uses: actions/checkout@v2
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@3.04
       with:
@@ -30,23 +30,23 @@ jobs:
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: restapi
-  deploy-restapi:
+  deploy-webapp:
     needs: [docker-push-restapi,docker-push-webapp]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Deploy restapi
+    - name: Deploy webapp
       uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_api_key: ${{ secrets.DEPLOY_KEY }}
         heroku_app_name: "dede-es2a-webapp"
         heroku_email: ${{ secrets.EMAIL }}
         usedocker: true
-        appdir: "webapp"
+        appdir: "webapp"     
         docker_build_args: |
           API_URI
       env:
-        API_URI: "https://dede-es2a-restapi.herokuapp.com/"   
+        API_URI: "https://dede-es2a-restapi.herokuapp.com/"
   deploy-restapi:
     needs: [docker-push-restapi,docker-push-webapp]
     runs-on: ubuntu-latest
