--- a/.github/workflows/pruebaDeploy.yml
+++ b/.github/workflows/pruebaDeploy.yml
@@ -44,9 +44,9 @@ jobs:
         usedocker: true
         appdir: "webapp"     
         docker_build_args: |
-          API_URI
+          REACT_APP_API_URI
       env:
-        API_URI: "https://dede-es2a-restapi.herokuapp.com/"
+        REACT_APP_API_URI: "https://dede-es2a-restapi.herokuapp.com/"
   deploy-restapi:
     needs: [docker-push-restapi,docker-push-webapp]
     runs-on: ubuntu-latest
@@ -66,7 +66,7 @@ jobs:
           CLOUDINARY_API_KEY
           CLOUDINARY_API_SECRET
       env:
-        MONGO_URI: ${{secrets.MONGO_URI}}
-        CLOUDINARY_NAME: ${{secrets.CLOUD_NAME}}
-        CLOUDINARY_API_KEY: ${{secrets.CLOUD_KEY}}
-        CLOUDINARY_API_SECRET: ${{secrets.CLOUD_SECRET}}
+        MONGO_URI: ${{ secrets.MONGO_URI }}
+        CLOUDINARY_NAME: ${{ secrets.CLOUD_NAME }}
+        CLOUDINARY_API_KEY: ${{ secrets.CLOUD_KEY }}
+        CLOUDINARY_API_SECRET: ${{ secrets.CLOUD_SECRET }}
