--- a/.github/workflows/pruebaDeploy.yml
+++ b/.github/workflows/pruebaDeploy.yml
@@ -45,7 +45,7 @@ jobs:
         docker_build_args: |
           API_URI
       env:
-        API_URI: "https://dede-es2a-restapi.herokuapp.com/"
+        API_URI: "https://dede-es2a-restapi.herokuapp.com"
   deploy-restapi:
     needs: [docker-push-restapi,docker-push-webapp]
     runs-on: ubuntu-latest
