--- a/.github/workflows/pruebaSinDocker.yml
+++ b/.github/workflows/pruebaSinDocker.yml
@@ -4,7 +4,6 @@ on:
     types: [published]
 jobs:
   deploy-webapp:
-    needs: [docker-push-restapi,docker-push-webapp]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -19,9 +18,8 @@ jobs:
         docker_build_args: |
           API_URI
       env:
-        API_URI: "https://dede-es2a-restapi.herokuapp.com/"
+        API_URI: "https://dede-es2a-restapi.herokuapp.com"
   deploy-restapi:
-    needs: [docker-push-restapi,docker-push-webapp]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
