--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -43,6 +43,7 @@ jobs:
     - run: npm --prefix webapp run build
     - run: npm --prefix webapp run test:e2e
   deploy-webapp:
+    needs: [e2e-tests]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -59,6 +60,7 @@ jobs:
       env:
         API_URI: "https://dede-es2a-restapi.herokuapp.com"
   deploy-restapi:
+    needs: [e2e-tests]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
