--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -2,7 +2,6 @@ name: CI for ASW2122
 on:
   release:
     types: [published]
-
 jobs:
   unit-test-webapp:
     runs-on: ubuntu-latest
@@ -30,21 +29,8 @@ jobs:
     - run: npm ci
     - run: npm test
     - uses: codecov/codecov-action@v2
-  e2e-tests:
-    needs: [unit-test-webapp, unit-test-restapi]
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 16
-    - run: npm --prefix webapp install
-    - run: npm --prefix restapi install
-    - run: npm --prefix webapp run build
-    - run: npm --prefix webapp run test:e2e
   deploy-webapp:
-    needs: [e2e-tests]
-    runs-on: ubuntu-latest
+    needs: [unit-test-webapp,unit-test-restapi]    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Deploy webapp
@@ -60,7 +46,7 @@ jobs:
       env:
         API_URI: "https://dede-es2a-restapi.herokuapp.com"
   deploy-restapi:
-    needs: [e2e-tests]
+    needs: [unit-test-webapp,unit-test-restapi]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
